@@ -9,8 +9,10 @@ Changelog for 1.4.1
 * Fixed bug 1209, Types of Businesses report shows total discounts (Chris T)
 * Fixed bug 1210, Cannot list business reporting units (Chris T)
 * Fixed bug 1211, Sequences always set to allow input (Chris T)
-* Fixed bug 1212, opaque error when no tax form selected on report (Chris T)
-* Fixed bug 1213, Company db name not displated on some reports (Chris T)
+* Fixed bug 1213, opaque error when no tax form selected on report (Chris T)
+* Fixed bug 1214, Company db name not displated on some reports (Chris T)
+* Fixed bug 1212, Fixed error regaring no default action (Chris T)
+* Fixed bug 1215, duplicate user throws incorrect error (Chris T)
 
 Chris T is Chris Travers
 Erik H is Erik Huelsmann
